--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Virtuoso</title>
     </head>
     <body>
-        <iframe id="myVideo" src="https://www.youtube.com/embed/B4-BgDEy2AE?autoplay=1&mute=1&controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+        <iframe id="myVideo" src="https://www.youtube.com/embed/B4-BgDEy2AE?playlist=B4-BgDEy2AE&loop=1&autoplay=1&mute=1&controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
         <h1 class="header">
             Jhin: Mind of the Virtuoso
         </h1>
@@ -18,21 +18,7 @@
             <a href="Story.html">read Jhin's story</a>
             <a href="Skills.html">Skills</a>
             <a href="Bio.html">Bio</a>
-        <button id="myBtn" onclick="myFunction()">Pause</button>
         </div>
-    <script>
-        var video = document.getElementById("myVideo");
-        var btn = document.getElementById("myBtn");
-
-            function myFunction() {
-              if (video.paused) {
-                video.play();
-                btn.innerHTML = "Pause";
-              } else {
-                video.pause();
-                btn.innerHTML = "Play";
-              }
-            }
     </script>
     </body>
 </html>
